--- a/x-auth-security/pom.xml
+++ b/x-auth-security/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+	<groupId>commons-cli</groupId>
+	<artifactId>commons-cli</artifactId>
+	<version>1.2</version>
+</dependency>
+        
     </dependencies>
     <build>
         <plugins>
