--- a/angular-mvn-bower/src/main/resources/public/bower.json
+++ b/angular-mvn-bower/src/main/resources/public/bower.json
@@ -10,6 +10,7 @@
         "angular":"*",
         "angular-resource":"*",
         "angular-route":"*",
-        "bootstrap":"*"
+        "bootstrap":"*",
+        "ng-table":"*"
     }
 }
