--- a/angular-mvn-bower/src/main/resources/public/bower.json
+++ b/angular-mvn-bower/src/main/resources/public/bower.json
@@ -11,6 +11,7 @@
         "angular-resource":"*",
         "angular-route":"*",
         "bootstrap":"*",
-        "ng-table":"*"
+        "ng-table":"*",
+        "angular-growl-2":"*"
     }
 }
